--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"name": "Minimalist for Facebook™ (beta)",
 	"version": "0.5.0",
-	"description": "Individually hide almost 50 interface elements and add custom logos, and more...",
+	"description": "Individually hide almost 50 interface elements, custom colors, and more...",
 	"icons": {
          "16": "img/icons/icon16.png",
 		 "48": "img/icons/icon48.png",
@@ -14,17 +14,13 @@
 	"background_page": "background.html",
 	"content_scripts": [ {
 		"matches": [ "http://www.facebook.com/*", "https://www.facebook.com/*" ],
-		"js": [ "js/stylesheet.js" , "js/active.js", "js/favicon.js" ],
+		"js": [ "js/stylesheet.js" ],
 		"run_at": "document_start",
 		"all_frames": true
 	}, {
 		"matches": [ "http://www.facebook.com/*", "https://www.facebook.com/*" ],
-		"js": [ "js/active.js", "js/favicon.js" ],
+		"js": [ "js/active.js", "js/favicon.js", "js/zoom.js" ],
 		"run_at": "document_end",
-		"all_frames": true
-	}, {
-		"matches": [ "http://www.google.com/voice/*", "https://www.google.com/voice/*" ],
-		"js": [ "js/voice.js" ],
 		"all_frames": true
 	} ],
 	"converted_from_user_script": true,
