--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "Minimalist for Facebook™ (beta)",
-	"version": "0.5.0",
+	"version": "0.5.4",
 	"description": "Individually hide almost 50 interface elements, custom colors, and more...",
 	"icons": {
          "16": "img/icons/icon16.png",
@@ -13,12 +13,12 @@
 	},
 	"background_page": "background.html",
 	"content_scripts": [ {
-		"matches": [ "http://www.facebook.com/*", "https://www.facebook.com/*" ],
+		"matches": [ "http://www.facebook.com/*", "https://www.facebook.com/*", "http://apps.facebook.com/*", "https://apps.facebook.com/*" ],
 		"js": [ "js/stylesheet.js" ],
 		"run_at": "document_start",
 		"all_frames": true
 	}, {
-		"matches": [ "http://www.facebook.com/*", "https://www.facebook.com/*" ],
+		"matches": [ "http://www.facebook.com/*", "https://www.facebook.com/*", "http://apps.facebook.com/*", "https://apps.facebook.com/*" ],
 		"js": [ "js/active.js", "js/favicon.js", "js/zoom.js" ],
 		"run_at": "document_end",
 		"all_frames": true
